<resources>

    <string name="app_name">TukTuk Driver</string>


    <string name="copyright_2019_all_rights_reserved">© Copyright 2019 | All Rights Reserved</string>
    <string name="share_ride_with_your_friends">share ride\nwith your\nfriends.</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_tuktuk">Welcome to tuktuk\nDriver App</string>
    <string name="track_your_ride_in_real_time">Track your\nride in\nreal time.</string>
    <string name="enter_your_mobile_nnumber">Enter your mobile\nnumber</string>
    <string name="get_otp">Get OTP</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="code_sent_to_you">Enter the 4 digit code we sent you\n at<b> +964 </b></string>
    <string name="resend_code_in">Resend code in</string>
    <string name="let_s_start">Let\'s Start</string>
    <string name="search_country">Search Country</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="my_wallet">My Wallet</string>
    <string name="payment">Payment</string>
    <string name="account">Account</string>
    <string name="setting">Setting</string>
    <string name="notifications">Notifications</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="account_login">Account Login</string>
    <string name="enter_number">Enter Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="next">Next</string>
    <string name="agree">Agree</string>
    <string name="add_documents">Add Documents</string>
    <string name="what_s_your_email_address">What\'s your email address?</string>
    <string name="create_your_account_password">Create your account password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="what_s_your_name">What\'s your name?</string>
    <string name="driving_license">Driving License</string>
    <string name="vehicle_registration">Vehicle Registration Document</string>
    <string name="identity_card">Identity Card</string>
    <string name="add_photo">Add Photo</string>
    <string name="lets_start">Let\'s Start</string>
    <string name="upload_your_driving_license">Upload your driving license</string>
    <string name="upload_your_photo">Upload your photo</string>
    <string name="Upload_vehicle_document">Upload your vehicle registration document</string>
    <string name="select_license_type">Select license type</string>
    <string name="terms_policy">By tapping the button below, you agree to  <b>tuktuk\'s</b> Term of Use and Privacy Policy</string>
    <string name="terms_policy2">To learn more, see our  <font color='red'>Terms of Use</font> and <font style="color:#00B9FF">Privacy Policy</font></string>
    <string name="upload">Upload</string>
    <string name="error_login">The mobile number or password you entered is incorrect!</string>
    <string name="save">Save</string>
    <string name="vehicle">Vehicles</string>
    <string name="document">Documents</string>
    <string name="editIno">Edit Info</string>
    <string name="reportIssue">Report App Issue</string>
    <string name="about">About</string>
    <string name="security">Security and Privacy</string>
    <string name="addVehicleData">Add Vehicle</string>
    <string name="addvehicle">Add a Vehicle</string>
    <string name="addyrvehicle">Add your vehicle</string>
    <string name="vehicleText">In order to drive. you need to add a vehicle.</string>
    <string name="make">Make*</string>
    <string name="enterModel">Enter Model</string>
    <string name="enterLic">Enter License Plate Number</string>
    <string name="enterVeh">Enter Vehicle Colour</string>
    <string name="enterIssue">Enter</string>
    <string name="model">Model*</string>
    <string name="year">Year*</string>
    <string name="laser">License Plate Number*</string>
    <string name="vehicle_color">Vehicle color</string>
    <string name="dummy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</string>
    <string name="send">Send</string>
    <string name="delete_your_account">Delete your Account</string>
    <string name="enter_expiry">Enter Expiry Date</string>
    <string name="passport">Passport</string>
    <string name="enter_modal">Enter Model</string>
    <string name="enter_licence">Enter License Plate Number</string>
    <string name="enter_color">Enter Vehicle Color</string>
    <string name="driving_preferences">Driving Preferences</string>
    <string name="suggestion_move">Suggestion Move</string>
    <string name="my_day">My Day</string>
    <string name="suggested_move">Suggested Move</string>
    <string name="high_demand_area">High-demand area</string>
    <string name="add_a_destination">Add a destination</string>
    <string name="driver_preferences">Driver preferences</string>
    <string name="go_offline">Go offline</string>
    <string name="open_to_most_trips">Open to most trips</string>
    <string name="on">ON</string>
    <string name="dropoff_areas">Dropoff Areas</string>
    <string name="rider_rating">Rider Rating</string>
    <string name="accept_cash">Accept Cash</string>
    <string name="reset">Reset</string>
    <string name="rating">4.0</string>
    <string name="basic">Basic</string>
    <string name="time">4 mins</string>
    <string name="distance">0.5 km</string>
    <string name="tap_to_accept">Tap to accept</string>
    <string name="reject">Reject</string>

</resources>
