<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="7dp"
        android:src="@drawable/arrow_back" />


    <TextView
        android:id="@+id/tv_enter_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_back"
        android:layout_marginStart="20sp"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/nunitosans_regular"
        android:lineHeight="40sp"
        android:text="@string/create_your_account_password"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_enter_mobile"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="19dp"
        android:cursorVisible="true"
        android:fontFamily="@font/nunitosans_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lineHeight="27sp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorBlack"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        android:theme="@style/TextLabel" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginLeft="20sp"
        android:layout_marginTop="43dp"
        android:layout_marginRight="19dp"
        android:cursorVisible="true"
        android:fontFamily="@font/nunitosans_regular"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:lineHeight="27sp"
        android:paddingBottom="10dp"
        android:textColor="@color/colorBlack"
        android:textCursorDrawable="@null"
        android:textSize="20sp"
        android:theme="@style/TextLabel" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="17sp"
        android:background="@drawable/red_rounded_btn"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="23sp" />

</RelativeLayout>