<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome"
    tools:context=".activity.WelcomeActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttons"
        android:layout_marginStart="18dp"
        android:fontFamily="@font/nunitosans_bold"
        android:lineHeight="40sp"
        android:layout_marginBottom="49dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/welcome_tuktuk"
        android:textColor="@color/colorWhite"
        android:textSize="32sp" />


    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login"
            android:layout_width="158dp"
            android:layout_height="63dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/white_rounded_btn"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/login"
            android:lineHeight="31dp"
            android:lineSpacingExtra="8sp"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="23sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register"
            android:layout_width="158dp"
            android:layout_height="63dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1"
            android:background="@drawable/red_rounded_btn"
            android:fontFamily="@font/nunito_bold"
            android:text="@string/register"
            android:lineHeight="31dp"
            android:lineSpacingExtra="8sp"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="23sp" />


    </LinearLayout>


</RelativeLayout>