<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".activity.AddVehicleDetailsActiivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:elevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/close"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="15sp"
                android:scaleType="fitXY"
                android:src="@drawable/arrow_back" />

            <TextView
                android:id="@+id/vehicleTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17sp"
                android:layout_marginRight="15sp"
                android:fontFamily="@font/nunitosans_regular"
                android:text="@string/addVehicleData"
                android:textColor="@color/colorBlack"
                android:textSize="23sp" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnAddVehicle"
        android:layout_below="@+id/toolbar"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/nunitosans_regular"
                android:lineHeight="40sp"
                android:text="@string/make"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"
                android:visibility="visible" />


            <org.angmarch.views.NiceSpinner
                android:id="@+id/make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="19dp"
                android:fontFamily="@font/nunitosans_regular"
                android:padding="0dp"
                android:textAlignment="textStart"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:background="@color/colorGray" />


            <!--<EditText
                android:id="@+id/make"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="19dp"
                android:cursorVisible="true"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/enter"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lineHeight="27sp"
                android:paddingLeft="5dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:theme="@style/TextLabel"
                android:visibility="visible" />-->


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/nunitosans_regular"
                android:lineHeight="40sp"
                android:text="@string/model"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="19dp"
                android:cursorVisible="true"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/enter_modal"
                android:inputType="text"
                android:lineHeight="27sp"
                android:paddingLeft="5dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:theme="@style/TextLabel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/nunitosans_regular"
                android:lineHeight="40sp"
                android:text="@string/year"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />


            <org.angmarch.views.NiceSpinner
                android:id="@+id/year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="19dp"
                android:fontFamily="@font/nunitosans_regular"
                android:textSize="20dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="19dp"
                android:layout_marginRight="19dp"
                android:background="@color/colorGray" />


            <!-- <EditText
                 android:id="@+id/year"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="19dp"
                 android:layout_marginTop="13dp"
                 android:layout_marginRight="19dp"
                 android:cursorVisible="true"
                 android:fontFamily="@font/nunitosans_regular"
                 android:hint="@string/enter"
                 android:inputType="number"
                 android:lineHeight="27sp"
                 android:paddingLeft="5dp"
                 android:paddingBottom="10dp"
                 android:textColor="@color/colorBlack"
                 android:textCursorDrawable="@null"
                 android:textSize="20sp"
                 android:theme="@style/TextLabel" />-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/nunitosans_regular"
                android:lineHeight="40sp"
                android:text="@string/laser"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/licensePlate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="19dp"
                android:cursorVisible="true"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/enter_licence"
                android:inputType="text"
                android:lineHeight="27sp"
                android:paddingLeft="5dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:theme="@style/TextLabel" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/nunitosans_regular"
                android:lineHeight="40sp"
                android:text="@string/vehicle_color"
                android:textColor="@color/colorBlack"
                android:textSize="20sp" />


            <EditText
                android:id="@+id/vehilceColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="19dp"
                android:cursorVisible="true"
                android:fontFamily="@font/nunitosans_regular"
                android:hint="@string/enter_color"
                android:inputType="text"
                android:lineHeight="27sp"
                android:paddingLeft="5dp"
                android:paddingBottom="10dp"
                android:textColor="@color/colorBlack"
                android:textCursorDrawable="@null"
                android:textSize="20sp"
                android:theme="@style/TextLabel" />


        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddVehicle"
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="23dp"
        android:layout_marginBottom="20sp"
        android:background="@drawable/red_rounded_btn"
        android:fontFamily="@font/nunitosans_bold"
        android:text="@string/addVehicleData"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="23sp" />

</RelativeLayout>